NATTQA-ENV/force-app/main/default/objects/CONTAINER_Invoice_Detail__c/CONTAINER_Invoice_Detail__c.object-meta.xml
<CustomObject>
    <label>Invoice Detail</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>