NATTQA-ENV/force-app/main/default/objects/CONTAINER_Invoice_Detail__c/fields/CONTAINER_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field for Invoice Detail object</description>
    <label>Commissioning</label>
    <referenceTo>CONTAINER_Commissionig__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>