NATTQA-ENV/force-app/main/default/objects/CONTAINER_Invoice_Detail__c/fields/CONTAINER_Quantity_Done__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quantity_Done__c</fullName>
    <label>Quantity Done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>