NATTQA-ENV/force-app/main/default/objects/CONTAINER_Invoice_Detail__c/fields/CONTAINER_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field for Invoice Detail object</description>
    <label>Work Order</label>
    <referenceTo>CONTAINER_Work_Order__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>